--- a/src/www/time.html
+++ b/src/www/time.html
@@ -74,6 +74,11 @@
         <div id="time" class="text-gray-700 font-semibold">Server Time:</div>
       </div>
 
+      <div class="mb-4">
+        <label for="brightnessControl" class="text-gray-700 font-semibold">Brightness:</label>
+        <input type="range" id="brightnessControl" min="0" max="15" value="5" step="1" class="w-full">
+      </div>
+
       <div class="flex justify-center">
         <button id="refreshBtn"
           class="bg-green-600 text-white font-semibold py-2 px-4 rounded focus:outline-none hover:bg-green-700">Refresh</button>
