--- a/src/www/time.html
+++ b/src/www/time.html
@@ -29,7 +29,7 @@
                   <div class="bg-gradient-to-br from-gray-800 to-gray-900"></div>
                   <div class="bg-gradient-to-br from-gray-700 to-gray-900"></div>
                 </div>
-                <div class="relative px-1" id="flipClockYear">0000</div>
+                <div class="relative px-1" id="flipClockYear" x-text="timeDisplay[0].toString().padStart(4, '0')">0000</div>
                 <div class="absolute inset-0 w-full  h-full flex items-center justify-center">
                   <div class="h-px w-full  bg-gray-800"></div>
                 </div>
@@ -76,7 +76,7 @@
 
       <div class="mb-4">
         <label for="brightnessControl" class="text-gray-700 font-semibold">Brightness:</label>
-        <input type="range" id="brightnessControl" min="0" max="15" :value="settings.brightness" step="1"
+        <input @change="brigtnessUpdated()" type="range" id="brightnessControl" min="0" max="15" :value="settings.brightness" step="1"
           class="w-full">
       </div>
 
@@ -97,18 +97,34 @@
       return {
         settings: { 'brightness': 5 },
         timeDisplay: [0, 0, 0, 0, 0, 0],
-        path: 'http://192.168.1.181', // use this for development
+        path: 'http://192.168.1.161', // use this for development
         //path: '', //use this for production
         init() {
           console.log('init')
           this.getClockSettings()
         },
         async getClockSettings() {
-          const response = await fetch(path + '/get-clock-settings')
+          const response = await fetch(this.path + '/get-clock-settings')
           if (response.ok) {
             this.settings = await response.json()
             console.log(this.settings)
             this.timeDisplay = this.settings.time
+          }
+        },
+        async brigtnessUpdated() {
+          console.log('brightness updated '+this.settings.brightness)
+          this.updateSettings()
+        },
+        async updateSettings() {
+          const response = await fetch(this.path + '/set-clock-settings', {
+            method: 'POST',
+            headers: {
+              'Content-Type': 'application/json'
+            },
+            body: JSON.stringify(this.settings)
+          })
+          if (response.ok) {
+            console.log('settings updated')
           }
         },
         refresh() {
@@ -124,39 +140,6 @@
       }
     }
 
-    const statusElement = document.getElementById('status')
-    const timeElement = document.getElementById('time')
-    const refreshBtn = document.getElementById('refreshBtn')
-    const flipClockHours = document.getElementById('flipClockHours')
-    const flipClockMins = document.getElementById('flipClockMins')
-    const flipClockYear = document.getElementById('flipClockYear')
-    const path = 'http://192.168.1.181'
-    let settings = { 'brightness': 5 }
-    //const path = ''
-
-
-    async function getTime() {
-      const response = await fetch(path + '/get-time')
-      if (response.ok) {
-        const json = await response.json()
-        if (json.error) {
-          statusElement.textContent = 'Error: ' + json.message
-        } else {
-          statusElement.textContent = 'Time OK'
-        }
-        timeElement.textContent = `Server Time: ${formatTime(json.time)}`
-        flipClockHours.textContent = json.time[3].toString().padStart(2, '0')
-        flipClockMins.textContent = json.time[4].toString().padStart(2, '0')
-        flipClockYear.textContent = json.time[0].toString().padStart(4, '0')
-      } else {
-        statusElement.textContent = 'Error: ' + response.status
-      }
-    }
-
-    function formatTime(timeArray) {
-      const [year, month, day, hour, minute, second] = timeArray;
-      return `${year}-${month.toString().padStart(2, '0')}-${day.toString().padStart(2, '0')} ${hour.toString().padStart(2, '0')}:${minute.toString().padStart(2, '0')}:${second.toString().padStart(2, '0')}`;
-    }
 
   </script>
 </body>
