fixed just before the hour error hour too small

--- a/src/www/time.html
+++ b/src/www/time.html
@@ -67,24 +67,52 @@
         </div>
       </div>
 
-      <div class="mb-4">
-        <label for="brightnessControl" class="block text-sm font-medium leading-6 text-gray-900">Brightness: <span
-          x-text="settings.brightness"></span></label>
-        <input @change="brigtnessUpdated()" type="range" id="brightnessControl" min="0" max="15"
-          x-model.number="settings.brightness" step="1" class="w-full">
-      </div>
 
       <div class="mb-4">
         <label for="brightnessControl" class="block text-sm font-medium leading-6 text-gray-900">Brightness: <span
-          x-text="settings.brightness"></span></label>
+            x-text="settings.brightness"></span></label>
         <input @change="brigtnessUpdated()" type="range" id="brightnessControl" min="0" max="15"
-          x-model.number="settings.brightness" step="1" class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer dark:bg-gray-700">
+          x-model.number="settings.brightness" step="1" class="w-full bg-transparent cursor-pointer appearance-none disabled:opacity-50 disabled:pointer-events-none focus:outline-none
+          [&::-webkit-slider-thumb]:w-2.5
+[&::-webkit-slider-thumb]:h-2.5
+[&::-webkit-slider-thumb]:-mt-0.5
+[&::-webkit-slider-thumb]:appearance-none
+[&::-webkit-slider-thumb]:bg-white
+[&::-webkit-slider-thumb]:shadow-[0_0_0_4px_rgba(37,99,235,1)]
+[&::-webkit-slider-thumb]:rounded-full
+[&::-webkit-slider-thumb]:transition-all
+[&::-webkit-slider-thumb]:duration-150
+[&::-webkit-slider-thumb]:ease-in-out
+[&::-webkit-slider-thumb]:dark:bg-slate-700
+
+[&::-moz-range-thumb]:w-2.5
+[&::-moz-range-thumb]:h-2.5
+[&::-moz-range-thumb]:appearance-none
+[&::-moz-range-thumb]:bg-white
+[&::-moz-range-thumb]:border-4
+[&::-moz-range-thumb]:border-blue-600
+[&::-moz-range-thumb]:rounded-full
+[&::-moz-range-thumb]:transition-all
+[&::-moz-range-thumb]:duration-150
+[&::-moz-range-thumb]:ease-in-out
+
+[&::-webkit-slider-runnable-track]:w-full
+[&::-webkit-slider-runnable-track]:h-2
+[&::-webkit-slider-runnable-track]:bg-gray-100
+[&::-webkit-slider-runnable-track]:rounded-full
+[&::-webkit-slider-runnable-track]:dark:bg-gray-700
+
+[&::-moz-range-track]:w-full
+[&::-moz-range-track]:h-2
+[&::-moz-range-track]:bg-gray-100
+[&::-moz-range-track]:rounded-full
+          ">
       </div>
 
       <div class="mb-4">
         <label for="timeControl" class="block text-sm font-medium leading-6 text-gray-900">Time:</label>
         <input @change="datetimeUpdated()" step="60" type="datetime-local" id="timeControl" x-model="newTimeString"
-          class="w-full">
+          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full ps-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500">
       </div>
 
       <!-- single color -->
@@ -119,7 +147,7 @@
           console.log('init')
           this.getClockSettings()
           this.newTimeString = this.formatTime(this.dateToArray(new Date()), false)
-          
+
         },
         async getClockSettings() {
           const response = await fetch(this.path + '/get-clock-settings')
