fix wifi reconnecting

--- a/src/www/time.html
+++ b/src/www/time.html
@@ -121,7 +121,7 @@
 
       <div x-show="selectedOption=='Updates'" x-collapse x-collapse.duration.1000ms
         class=" rounded-lg ring-1 ring-gray-100 p-3 my-4">
-        Updates Comming Soon ...
+        Updates Coming Soon ...
       </div>
 
 
